nested/linkedNetwork.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "metadata": {
                "description": "Specify a location for the resources."
            }
        },
        "main.deploymentName": {
            "type": "string",
            "defaultValue": "[uniqueString(resourceGroup().id)]",
            "metadata": {
                "description": "deploymentName"
            }
        },
        "linkedNetwork.vnetName": {
            "type": "string",
            "defaultValue": "[concat('vNET',parameters('main.deploymentName'))]",
            "metadata": {
                "description": "vNET name"
            }
        },
        "linkedNetwork.vnetRange": {
            "type": "string",
            "defaultValue": "10.128.0.0/16",
            "metadata": {
                "description": "vNET range /16"
            }
        }
    },
    "variables": {
        "linkedNetwork.nsgCoreName": "[concat(parameters('main.deploymentName'),'nsgCore')]",
        "linkedNetwork.nsgCoreID": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('linkedNetwork.nsgCoreName'))]",
        "linkedNetwork.vnetRangesubnet": "[first(split(parameters('linkedNetwork.vnetRange'), '/'))]",
        "linkedNetwork.vnetRangesubnetOctets2": "[take(split(variables('linkedNetwork.vnetRangesubnet'), '.'), 2)]",
        "linkedNetwork.vnetRangesubnetOctets2String": "[concat(variables('linkedNetwork.vnetRangesubnetOctets2')[0], '.', variables('linkedNetwork.vnetRangesubnetOctets2')[1], '.')]",
        "linkedNetwork.bastionSubnetRange": "[concat(variables('linkedNetwork.vnetRangesubnetOctets2String'),'10.0/24')]",
        "linkedNetwork.aksAppPoolSubnetRange": "[concat(variables('linkedNetwork.vnetRangesubnetOctets2String'),'11.0/24')]",
        "linkedNetwork.aksSystemPoolSubnetRange": "[concat(variables('linkedNetwork.vnetRangesubnetOctets2String'),'12.0/24')]",
        "linkedNetwork.reboundVMSubnetRange": "[concat(variables('linkedNetwork.vnetRangesubnetOctets2String'),'13.0/24')]",
        "linkedNetwork.dmzSubnetRange": "[concat(variables('linkedNetwork.vnetRangesubnetOctets2String'),'14.0/24')]",
        "linkedNetwork.privateendpointSubnetRange": "[concat(variables('linkedNetwork.vnetRangesubnetOctets2String'),'15.0/24')]"

    },
    "resources": [
        {
            "apiVersion": "2020-08-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('linkedNetwork.nsgCoreName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowHttpsInBound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowGatewayManagerInBound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "GatewayManager",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowLoadBalancerInBound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowBastionHostCommunicationInBound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationPortRanges": [
                                "8080",
                                "5701"
                            ],
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRange": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowSshRdpOutBound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRanges": [
                                "22",
                                "3389"
                            ],
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "AllowAzureCloudCommunicationOutBound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "AzureCloud",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "AllowBastionHostCommunicationOutBound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationPortRanges": [
                                "8080",
                                "5701"
                            ],
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "AllowGetSessionInformationOutBound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "destinationPortRanges": [
                                "80",
                                "443"
                            ],
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 1000,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },


        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-06-01",
            "name": "[parameters('linkedNetwork.vnetName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[variables('linkedNetwork.nsgCoreID')]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('linkedNetwork.vnetRange')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "bastionSubnet",
                        "properties": {
                            "addressPrefix": "[variables('linkedNetwork.bastionSubnetRange')]",
                            "networkSecurityGroup": {
                                "id": "[variables('linkedNetwork.nsgCoreID')]"
                            }
                        }
                    },
                    {
                        "name": "aksAppPoolSubnet",
                        "properties": {
                            "addressPrefix": "[variables('linkedNetwork.aksAppPoolSubnetRange')]",
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }

                    },
                    {
                        "name": "aksSystemPoolSubnet",
                        "properties": {
                            "addressPrefix": "[variables('linkedNetwork.aksSystemPoolSubnetRange')]",
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }

                    },
                    {
                        "name": "privateEndpointSubnet",
                        "properties": {
                            "addressPrefix": "[variables('linkedNetwork.privateendpointSubnetRange')]",
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }

                    },
                    {
                        "name": "vmSubnet",
                        "properties": {
                            "addressPrefix": "[variables('linkedNetwork.reboundVMSubnetRange')]",
                            "networkSecurityGroup": {
                                "id": "[variables('linkedNetwork.nsgCoreID')]"
                            },
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    },
                    {
                        "name": "dmzSubnet",
                        "properties": {
                            "addressPrefix": "[variables('linkedNetwork.dmzSubnetRange')]",
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }

                    }



                ]
            }
        }

    ],
    "outputs": {
    }
}
